Fixed alignment of Logo
Logo Fix

--- a/css/deck.css
+++ b/css/deck.css
@@ -114,6 +114,10 @@ p {
 #navbar h1 {
   float: left;
   padding-top: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0 !important;
+  text-align: center;
 }
 
 #navbar ul {
